# faceapp

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  app.js  index.html  package-lock.json  package.json  requirements.txt  run.sh  server.py  styles.css
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  scan_performance.md
.github/workflows/: build-intel-macos.yml  build-windows.yml  check.yml
backend/: __init__.py  clustering.py  config.py  database.py  detector.py  http_handler.py  logging_config.py  metadata.py  scanner.py  search_parser.py  tagging.py  video.py
desktop/: app.js  index.html  styles.css
docs/: api-testing.md  architecture.md  configuration.md  desktop-packaging.md  installation.md  roadmap.md  video-scanning.md
docs/assets/: architecture_flow.drawio
packaging/: backend_entry.py  local-face-backend.spec
postman/: Local Face Photos.postman_collection.json
scripts/: check.py  desktop_build.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/: frontend_contract.test.mjs  test_albums_and_tags.py  test_clustering.py  test_database_migrations.py  test_http_handler.py  test_logging_config.py  test_scan_album.py  test_search_parser.py  test_video_filters.py
