[package]
name = "local-face-photos"
version = "0.1.0"
description = "Local-first face search for personal photos and videos"
authors = ["Local Face Photos contributors"]
license = "MIT"
repository = "https://github.com/madanaman/faceapp"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
